--- a/FateCharacterGenerator/FateCharacterGenerator.csproj
+++ b/FateCharacterGenerator/FateCharacterGenerator.csproj
@@ -11,5 +11,8 @@
         <None Update="CharacterTemplates\**">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="Save\**">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 </Project>
